--- a/src/sa_web/jstemplates/place-form.html
+++ b/src/sa_web/jstemplates/place-form.html
@@ -1,247 +1,114 @@
-<h4 class="">{{ place_config.title }}</h4>
 <p class="drag-marker-instructions">{{#_}}First drag the map to set your pin's location.{{/_}}</p>
 <p class="drag-marker-warning is-visuallyhidden">{{#_}}It looks like you didn't set your location yet. Please drag the map to your location.{{/_}}</p>
 
 <p class="form-field">{{ place_config.help_text }}</p>
 
-<form id="place-form" class="place-form clearfix">
+<h3 class="">{{ place_config.title }}</h3>
+
+<form novalidate id="dev-place-form-choice" class="dev-place-form-choice clearfix">
+  <fieldset class="report-type">
+    <input id="observation-choice" type="radio" name="category" value="observation-choice" class="toggle-sibling-input toggle-sibling-input-1" required>
+    <label style="min-width:40%;" for="observation-choice" class="observation-label toggle-sibling-label less-padding no-margin-left some-margin-right some-margin-bottom button radius">
+      <img class="inline-icon large" src="{{ STATIC_URL }}css/images/markers/marker-observation.png">
+      <strong>Observation</strong>
+    </label>
+
+    <input id="question-choice" type="radio" name="category" value="question-choice" class="toggle-sibling-input toggle-sibling-input-2" required>
+    <label style="min-width:40%;" for="question-choice" class="question-label toggle-sibling-label less-padding no-margin-left some-margin-right some-margin-bottom button radius">
+      <img class="inline-icon large" src="{{ STATIC_URL }}css/images/markers/marker-question.png">
+      <strong>Question</strong>
+    </label>
+
+    <input id="idea-choice" type="radio" name="category" value="idea-choice" class="toggle-sibling-input toggle-sibling-input-3" required>
+    <label style="min-width:40%;" for="idea-choice" class="idea-label toggle-sibling-label less-padding no-margin-left some-margin-right some-margin-bottom button radius">
+      <img class="inline-icon large" src="{{ STATIC_URL }}css/images/markers/marker-idea.png">
+      <strong>Idea</strong>
+    </label>
+
+    <input id="complaint-choice" type="radio" name="category" value="complaint-choice" class="toggle-sibling-input toggle-sibling-input-4" required>
+    <label style="min-width:40%;" for="complaint-choice" class="complaint-label toggle-sibling-label less-padding no-margin-left some-margin-right some-margin-bottom button radius">
+      <img class="inline-icon large" src="{{ STATIC_URL }}css/images/markers/marker-complaint.png">
+      <strong>Complaint</strong>
+    </label>
+
+  </fieldset>
+</form>
+
+<form id="dev-place-choice-child-form" class="dev-place-choice-child-form clearfix">
 
   <fieldset>
-    <input type="hidden" name="visible" value="on">
-    <input type="hidden" name="user_token" value="{{{ user_token }}}">
+    <div class="text form-field">
+      <label for="place-name">Title of report <small>(optional)</small></label>
+      <input id="place-name" name="name" type="text" placeholder="Enter title" size="30" value="">
+    </div>
 
-    <!-- TODO We need user data in the template to know whether a user
-         is already logged in.
-       -->
+    <div class="text form-field">
+      <label for="place-submitter_name">Your Name <small>(optional)</small></label>
+      <input id="place-submitter_name" name="submitter_name" type="text" placeholder="Name" size="30" value="">
+      <span class="or-sign-in">Or sign in with <a class="auth-inline twitter-btn" href="/users/login/twitter/">Twitter</a> <a class="auth-inline facebook-btn" href="/users/login/facebook/">Facebook</a></span>
+    </div>
 
-    {{# place_config.items }}
+    <div class="text form-field">
+      <label for="place-private-submitter_email">Your Email <small>(optional)</small></label>
+      <input id="place-private-submitter_email" name="private-submitter_email" type="text" placeholder="Email address" size="30" value="">
+    </div>
 
-      <div class="{{ type }} form-field">
-        {{#is_authenticated}}
-          {{^is_submitter_name}}
-            <label for="place-{{ name }}">{{ prompt }} {{# optional }}<small>({{#_}}optional{{/_}})</small>{{/ optional }}</label>
-          {{/is_submitter_name}}
-          {{^}}
-          <label for="place-{{ name }}">{{ prompt }} {{# optional }}<small>({{#_}}optional{{/_}})</small>{{/ optional }}</label>
-        {{/is_authenticated}}
+    <div class="textarea form-field">
+      <label for="place-description">Description <small>(optional)</small></label>
+      <textarea id="place-description" name="description" placeholder="Description..." data-gramm="" data-txt_gramm_id="2bec75f0-5935-f338-ea9a-2d155d91e6b5"></textarea>
+    </div>
 
-        {{#if is_hidden}}
-          <input id="place-{{ name }}" name="{{ name }}" type="{{ type }}" key="hidden"
-                 {{#attrs}}
-                 {{ key }}="{{ value }}"
-                 {{/attrs}} value="{{value}}">
-        {{/if}}
+    <div class="file form-field">
+      <label for="place-my_image">Image <small>(optional)</small></label>
+      <!--[if lt IE 10 ]><br>Sorry, your browser isn't compatible with our file upload method.<![endif]-->
+      <!--[if (gt IE 9)|!(IE)]><!-->
+      <span class="fileinput-container btn btn-small">
+        <span>Add an Image</span>
+        <input id="place-my_image" name="my_image" type="file" accept="image/*">
+      </span>
+      <span class="fileinput-name">
 
-        {{#if is_geocoding}}
-          <div class="geocoding-enabled">
-            <div id="geocode-address-place-bar" class="clearfix">
-              <p class="error is-hidden"></p>
-              <label class="geocode-address-label" for="geocode-address-field"></label>
-              <div class="geocode-spinner is-hidden"></div>
-              <input name="{{ name }}" {{#attrs}} {{ key }}="{{ value }}"{{/attrs}} type="text" id="geocode-address-field" class="geocode-address-field">
-            </div>
-          </div>
-        {{/if}}
-
-        {{#if is_checkbox_list}}
-          {{# attrs }}
-            <br>
-            <input id="place-{{ value }}" type="checkbox" name="{{ ../name }}" value="{{ value }}" />
-            <label for="place-{{ value }}">{{ label}} {{# optional }}<small>({{#_}}optional{{/_}})</small>{{/ optional }}</label>
-          {{/ attrs }}
-        {{/if}}
-
-        {{#if is_input}}
-          {{#is_submitter_name}}
-            {{^is_authenticated}}
-              <input id="place-{{ name }}" name="{{ name }}" type="{{ type }}" {{#attrs}} {{ key }}="{{ value }}"{{/attrs}} value="{{get_value ../../../.. name}}">
-              <span class="or-sign-in">{{#_}}Or sign in with <a class="auth-inline twitter-btn" href="/users/login/twitter/">Twitter</a> <a class="auth-inline facebook-btn" href="/users/login/facebook/">Facebook</a>{{/_}}</span>
-            {{/is_authenticated}}
-            {{^}}
-            <input id="place-{{ name }}" name="{{ name }}" type="{{ type }}" {{#attrs}} {{ key }}="{{ value }}"{{/attrs}} value="{{get_value ../../.. name}}">
-          {{/is_submitter_name}}
-        {{/if}}
-
-        {{#is_textarea}}
-          <textarea id="place-{{ name }}" name="{{ name }}"{{#attrs}} {{ key }}="{{ value }}"{{/attrs}}>{{get_value ../.. name}}</textarea>
-        {{/is_textarea}}
-
-        {{#is_select}}
-          <select id="place-{{ name }}" name="{{ name }}" type="{{ type }}" {{#attrs}} {{ key }}="{{ value }}"{{/attrs}}>
-            {{#select_item_value ../.. name}}
-              {{# options }}
-                {{#if label}}
-                  <option value="{{value}}">{{label}}</option>
-                {{else}}
-                  <option value="{{.}}">{{.}}</option>
-                {{/if}}
-              {{/ options }}
-            {{/select_item_value}}
-          </select>
-        {{/is_select}}
-
-        {{#is_file}}
-          <!--[if lt IE 10 ]><br>Sorry, your browser isn't compatible with our file upload method.<![endif]-->
-          <!--[if (gt IE 9)|!(IE)]><!-->
-          <span class="fileinput-container btn btn-small{{^is_fileinput_supported}} btn-disabled{{/is_fileinput_supported}}">
-            <span>{{ inputfile_label }}</span>
-            <input id="place-{{ name }}" name="{{ name }}" type="{{ type }}"
-                   {{#attrs}} {{ key }}="{{ value }}"{{/attrs}}
-                   {{^is_fileinput_supported}} disabled{{/is_fileinput_supported}}>
-          </span>
-          <span class="fileinput-name">
-            {{^is_fileinput_supported}}{{#_}}Sorry, your browser doesn't support file uploads.{{/_}}{{/is_fileinput_supported}}
-          </span>
-          <!--<![endif]-->
-        {{/is_file}}
-
-        {{#if help_text }}
-          <div class="help-text place-{{ name }}-help-text">{{ help_text }}</div>
-        {{/if}}
-      </div>
-    {{/ place_config.items }}
+      </span>
+      <!--<![endif]-->
+    </div>
   </fieldset>
 
-  <input name="save-place-btn" id="save-place-btn" type="submit" value="{{ place_config.submit_button_label }}" class="btn btn-primary submit-btn">
-
-  {{#is_authenticated}}
-    <p class="signed-in-as"><img src="{{ current_user "avatar_url" }}" class="avatar" /> {{ current_user "name" }}. <a class="" href="/users/logout/">{{#_}}Log Out{{/_}}</a></p>
-    {{^}}
-  {{/is_authenticated}}
-
+  <input name="save-place-btn" id="save-place-btn" type="submit" value="Put it on the map!" class="btn btn-primary submit-btn">
   <div class="form-spinner"></div>
 
 </form>
 
-<div class="row">
-  <div class="columns">
-
-    <div data-alert class="alert-box warning radius text-center form-instructions">
-      <strong>Drag the map to your location.</strong>
-    </div>
-
-    <form novalidate>
-
-      <h3><strong>What would you like to share?</strong></h3>
-
-      <input id="favorite-destination" type="radio" name="category" value="favorite-destination" class="toggle-sibling-input toggle-sibling-input-1" required>
-      <label style="min-width:40%;" for="favorite-destination" class="toggle-sibling-label less-padding no-margin-left some-margin-right some-margin-bottom button radius"><img class="inline-icon large" src="//openplans.github.io/planbox-themes/map-markers/fav-route.png">&nbsp;<strong>Favorite Destination</strong></label>
-
-      <input id="good-route" type="radio" name="category" value="good-route" class="toggle-sibling-input toggle-sibling-input-2" required>
-      <label style="min-width:40%;" for="good-route" class="toggle-sibling-label less-padding no-margin-left some-margin-right some-margin-bottom button radius"><img class="inline-icon large" src="//openplans.github.io/planbox-themes/map-markers/thumbs-up.png">&nbsp;<strong>Desirable Bike Route</strong></label>
-
-      <input id="difficult-crossing" type="radio" name="category" value="difficult-crossing" class="toggle-sibling-input toggle-sibling-input-3" required>
-      <label style="min-width:40%;" for="difficult-crossing" class="toggle-sibling-label less-padding no-margin-left some-margin-right some-margin-bottom button radius"><img class="inline-icon large" src="//openplans.github.io/planbox-themes/map-markers/bike-crossing.png">&nbsp;<strong>Difficult Crossing</strong></label>
-
-      <input id="bad-route" type="radio" name="category" value="bad-route" class="toggle-sibling-input toggle-sibling-input-4" required>
-      <label style="min-width:40%;" for="bad-route" class="toggle-sibling-label less-padding no-margin-left some-margin-right some-margin-bottom button radius"><img class="inline-icon large" src="//openplans.github.io/planbox-themes/map-markers/thumbs-down.png">&nbsp;<strong>Undesirable Bike Route</strong></label>
-
-      <label class="toggle-sibling-1">Location
-        <textarea name="location-name" placeholder="Location..." required></textarea>
-      </label>
-
-      <label class="toggle-sibling-3">What street/intersection is this?
-        <textarea name="street-name" placeholder="Street..." required></textarea>
-      </label>
-
-      <label class="toggle-sibling-2 toggle-sibling-4">What street/route is this?
-        <textarea name="street-name" placeholder="Street..." required></textarea>
-      </label>
-
-      <div class="toggle-sibling-3">
-        <label>What's at this intersection?</label>
-        <input id="traffic-signal" type="radio" name="crossing-type" value="traffic-signal" class="hide">
-        <label for="traffic-signal" class="toggle-sibling-label less-padding no-margin-left some-margin-right some-margin-bottom button small radius" required><strong>Traffic Signal</strong></label>
-        <input id="stop-sign" type="radio" name="crossing-type" value="stop-sign" class="hide">
-        <label for="stop-sign" class="toggle-sibling-label less-padding no-margin-left some-margin-right some-margin-bottom button small radius"><strong>Stop Sign</strong></label>
-        <input id="none" type="radio" name="crossing-type" value="none" class="hide">
-        <label for="none" class="toggle-sibling-label less-padding no-margin-left some-margin-right some-margin-bottom button small radius"><strong>Neither</strong></label>
-      </div>
-
-      <div class="toggle-sibling-1 toggle-sibling-2 toggle-sibling-3 toggle-sibling-4">
-        <label>Description</label>
-        <textarea name="description" placeholder="..." required></textarea>
-
-        {{#if submitter}}
-        <label>Your Email
-          <input type="email" name="private_email" placeholder="optional" data-sticky />
-        </label>
-        {{else}}
-        <div class="row">
-          <div class="large-6 columns">
-            <label>Your Name
-              <input type="text" name="submitter_name" required data-sticky />
-            </label>
-          </div>
-          <div class="large-6 columns">
-            <label>Your Email
-              <input type="email" name="private_email" placeholder="optional" data-sticky />
-            </label>
-          </div>
-        </div>
-        <p class="text-right text-small no-margins"><span class="or-sign-in">Or sign in with <a class="auth-inline shareabouts-auth-twitter-button" href="#">TWITTER</a> / <a class="auth-inline shareabouts-auth-facebook-button" href="#">FACEBOOK</a></span></p>
-        {{/if}}
-
-        <p class="some-padding-top some-margin-bottom"><strong>Please provide some optional/private information about yourself.</strong></p>
-
-        <input id="private-questions-yes" type="radio" name="private-questions" class="toggle-sibling-input toggle-sibling-input-10">
-        <label for="private-questions-yes" class="toggle-sibling-label button small less-padding radius no-margin-left some-margin-bottom">Okay</label>
-
-        <input id="private-questions-no" type="radio" name="private-questions" class="toggle-sibling-input toggle-sibling-input-11">
-        <label for="private-questions-no" class="toggle-sibling-label button small less-padding radius no-margin-left some-margin-bottom">Decline</label>
-
-        <div class="toggle-sibling-10">
-          <div class="row collapse prefix-radius">
-            <div class="small-3 columns">
-              <label for="private-zip" class="prefix">Home ZIP Code</label>
-            </div>
-            <div class="small-9 columns">
-              <input type="text" name="private-zip" id="private-zip" pattern="\d*" data-sticky />
-            </div>
-          </div>
-          <div class="row collapse prefix-radius">
-            <div class="small-3 columns">
-              <label for="private-age" class="prefix">Age</label>
-            </div>
-            <div class="small-9 columns">
-              <input type="number" name="private-age" id="private-age" data-sticky />
-            </div>
-          </div>
-          <div class="row collapse prefix-radius">
-            <div class="small-3 columns">
-              <label for="private-gender" class="prefix">Gender</label>
-            </div>
-            <div class="small-9 columns">
-              <select name="private-gender" id="private-gender" data-sticky>
-                <option></option>
-                <option value="female">Female</option>
-                <option value="male">Male</option>
-                <option value="other">Other</option>
-              </select>
-            </div>
-          </div>
-        </div>
-
-        <div class="row some-padding-top toggle-sibling-10 toggle-sibling-11">
-          <div class="medium-6 columns">
-            <input type="submit" value="Put On Map" class="button large expand radius shareabouts-submit-button"/>
-          </div>
-          <div class="medium-6 columns signed-in-as">
-            {{#if submitter}}
-            <img src="{{ submitter.avatar_url }}" class="avatar" /> {{ submitter.name }}
-            {{/if}}
-          </div>
-        </div>
-
-      </div>
-    </form>
-
-  </div>
-</div>
-
 <script type="text/javascript">
-  $( "#place-location_type" ).change(function() {
-    console.log("Handler for .change() called.");
-    alert( "Handler for .change() called." );
+  $( "#observation-choice" ).change(function() {
+    $( "#dev-place-choice-child-form" ).hide( "fast", function() {
+      console.log( "Animation complete." );
+    });
+    $( "#dev-place-choice-child-form" ).show( "fast", function() {
+      console.log( "Animation complete." );
+    });
+  });
+  $( "#question-choice" ).change(function() {
+    $( "#dev-place-choice-child-form" ).hide( "fast", function() {
+      console.log( "Animation complete." );
+    });
+    $( "#dev-place-choice-child-form" ).show( "fast", function() {
+      console.log( "Animation complete." );
+    });
+  });
+  $( "#idea-choice" ).change(function() {
+    $( "#dev-place-choice-child-form" ).hide( "fast", function() {
+      console.log( "Animation complete." );
+    });
+    $( "#dev-place-choice-child-form" ).show( "fast", function() {
+      console.log( "Animation complete." );
+    });
+  });
+  $( "#complaint-choice" ).change(function() {
+    $( "#dev-place-choice-child-form" ).hide( "fast", function() {
+      console.log( "Animation complete." );
+    });
+    $( "#dev-place-choice-child-form" ).show( "fast", function() {
+      console.log( "Animation complete." );
+    });
   });
 </script>
