--- a/src/flavors/duwamish_flavor/jstemplates/place-form.html
+++ b/src/flavors/duwamish_flavor/jstemplates/place-form.html
@@ -1,12 +1,41 @@
 <h4 class="">{{ place_config.title }}</h4>
 <p class="drag-marker-instructions">
   {{#_}}First drag the map to set your pin's location.{{/_}}
+  <!--
+  <div class="instructions-overlay-tooltip">
+    <div class="tooltip-arrow">
+    </div>
+    <div class="animated-tooltip">
+      <i class="pointer-tooltip fa fa-hand-pointer-o"></i>
+      <i class="grabber-tooltip fa fa-hand-rock-o"></i>
+    </div>
+  </div>
+  -->
 </p>
 <p class="drag-marker-warning is-visuallyhidden">{{#_}}It looks like you didn't set your location yet. Please drag the map to your location.{{/_}}</p>
 
 <p class="form-field">{{ place_config.help_text }}</p>
 
 <form id="place-form" class="place-form clearfix">
+
+  <div id="place-form-type-choice" class="place-form-type-choice clearfix">
+    <a id="observation-form-type" href="/place/new/observation" class="button">
+      <img class="inline-icon large" src="{{ STATIC_URL }}css/images/markers/marker-observation.png">
+      <strong>Observation</strong>
+    </a>
+    <a id="question-form-type" href="/place/new/question" class="button">
+      <img class="inline-icon large" src="{{ STATIC_URL }}css/images/markers/marker-question.png">
+      <strong>Question</strong>
+    </a>
+    <a id="idea-form-type" href="/place/new/idea" class="button">
+      <img class="inline-icon large" src="{{ STATIC_URL }}css/images/markers/marker-idea.png">
+      <strong>Idea</strong>
+    </a>
+    <a id="complaint-form-type" href="/place/new/complaint" class="button">
+      <img class="inline-icon large" src="{{ STATIC_URL }}css/images/markers/marker-complaint.png">
+      <strong>Complaint</strong>
+    </a>
+  </div>
 
   <fieldset>
     <input type="hidden" name="visible" value="on">
