--- a/src/sa_web/jstemplates/leaflet-sidebar-content.html
+++ b/src/sa_web/jstemplates/leaflet-sidebar-content.html
@@ -1,16 +1,16 @@
 <!-- Nav tabs -->
 <div class="sidebar-tabs">
     <ul role="tablist">
-        <li><a href="#legend" role="tab"><p>LEG</p></a></li>
-        <li><a href="#layers" role="tab"><p>LAY</p></a></li>
-        <li><a href="#activity-stream" role="tab"><p>A.S.</p></a></li>
+        <li><a href="#legend" role="tab"><i class="fa fa-info-circle"></i></a></li>
+        <li><a href="#layers" role="tab"><i class="fa fa-map-o"></i></a></li>
+        <li><a href="#activity-stream" role="tab"><i class="fa fa-comments-o"></i></a></li>
     </ul>
 </div>
 
 <!-- Tab panes -->
 <div class="sidebar-content">
     <div class="sidebar-pane" id="legend">
-        <h1 class="sidebar-header">Legend<span class="sidebar-close"><p>\<</p></span></h1>
+        <h1 class="sidebar-header">Legend<span class="sidebar-close"><i class="fa fa-chevron-left"></i></span></h1>
         <!-- SHAREABOUTS LAYERS -->
         <p>{{ reports.title }}:</p>
         <ul class="master-layer-list unstyled-list">
@@ -25,7 +25,7 @@
     </div>
 
     <div class="sidebar-pane" id="layers">
-        <h1 class="sidebar-header">Layers<span class="sidebar-close"><p><</p></span></h1>
+        <h1 class="sidebar-header">Layers<span class="sidebar-close"><i class="fa fa-chevron-left"></i></span></h1>
         <!-- MAP LAYERS -->
         <p>{{ layers.title }}:</p>
         <ul class="layer-type-list unstyled-list">
@@ -53,6 +53,6 @@
     </div>
 
     <div class="sidebar-pane" id="activity-stream">
-        <h1 class="sidebar-header">Activity Stream<span class="sidebar-close"><p><</p></span></h1>
+        <h1 class="sidebar-header">Activity Stream<span class="sidebar-close"><i class="fa fa-chevron-left"></i></span></h1>
     </div>
 </div>
