--- a/src/sa_web/jstemplates/place-form.html
+++ b/src/sa_web/jstemplates/place-form.html
@@ -16,105 +16,101 @@
          is already logged in.
        -->
 
-    <!-- place buttons for dynamic form categories -->
-    <div id="category-btns">
-      <div class="category-btn-prompt">{{place_config.dynamic_form_content.category_btn_prompt}}</div>
-      {{#each place_config.categories}}
-        <input type="radio" name="category-btn" id="category-btn-{{ name }}" index={{ @index }} value={{ label }} class="big-btn">
-        <label for="category-btn-{{ name }}" class="category-btn-label">{{ label }}</label>
-      {{/each}}
-    </div>
-    <div style="clear:both"></div>
-    <br>
+    {{# place_config.items }}
 
-    <!-- generate content for selected category -->
-    {{#each selected_category.fields}}
       <div class="{{ type }} form-field">
-        <label for="place-{{ name }}">{{ prompt }} {{# optional }}<small>({{#_}}optional{{/_}})</small>{{/ optional }}</label>
-        
-        <!-- begin field type definitions -->
-        {{#is type "text"}}
-          <input id="place-{{ name }}" name="{{ name }}" type="{{ type }}" {{#attrs}} {{ key }}="{{ value }}"{{/attrs}} placeholder="{{placeholder}}">      
-        {{/is}}
+        {{#is_authenticated}}
+          {{^is_submitter_name}}
+            <label for="place-{{ name }}">{{ prompt }} {{# optional }}<small>({{#_}}optional{{/_}})</small>{{/ optional }}</label>
+          {{/is_submitter_name}}
+          {{^}}
+          <label for="place-{{ name }}">{{ prompt }} {{# optional }}<small>({{#_}}optional{{/_}})</small>{{/ optional }}</label>
+        {{/is_authenticated}}
 
-        {{#is type "textarea"}}
-          <textarea id="place-{{ name }}" name="{{ name }}"{{#attrs}} {{ key }}="{{ value }}"{{/attrs}} placeholder="{{placeholder}}"></textarea>
-        {{/is}}
+        {{#if is_hidden}}
+          <input id="place-{{ name }}" name="{{ name }}" type="{{ type }}" key="hidden"
+                 {{#attrs}}
+                 {{ key }}="{{ value }}"
+                 {{/attrs}} value="{{value}}">
+        {{/if}}
 
-        {{#is type "radio_big_buttons"}}
-          <div>
-            {{#each (property ../../place_config.dynamic_form_content content)}}
-                <input type="radio" name={{ ../name }} id={{ value }} value={{ value }} class="big-btn">
-                <label for={{ value }}>{{ label }}</label>
-                <!--
-                <span name="" id="report-type-{{this.value}}" class="btn btn-primary report-type-btn">{{this.label}}</span>
-                -->
-            {{/each}}
+        {{#if is_geocoding}}
+          <div class="geocoding-enabled">
+            <div id="geocode-address-place-bar" class="clearfix">
+              <p class="error is-hidden"></p>
+              <label class="geocode-address-label" for="geocode-address-field"></label>
+              <div class="geocode-spinner is-hidden"></div>
+              <input name="{{ name }}" {{#attrs}} {{ key }}="{{ value }}"{{/attrs}} type="text" id="geocode-address-field" class="geocode-address-field">
+            </div>
           </div>
-          <div style="clear:both"></div>
-        {{/is}}
+        {{/if}}
 
-        {{#is type "checkbox_big_buttons"}}
-          <div>
-            {{#each (property ../../place_config.dynamic_form_content content)}}
-              <input type="checkbox" name={{ ../name }} id={{ value }} value={{ value }} class="big-btn">
-              <label for={{ value }}>{{ label }}</label>
+        {{#if is_checkbox_list}}
+          {{# attrs }}
+            <br>
+            <input id="place-{{ value }}" type="checkbox" name="{{ ../name }}" value="{{ value }}" />
+            <label for="place-{{ value }}">{{ label}} {{# optional }}<small>({{#_}}optional{{/_}})</small>{{/ optional }}</label>
+          {{/ attrs }}
+        {{/if}}
 
-            {{/each}}
-          </div>
-          <div style="clear:both"></div>
-        {{/is}}
-        <!-- end field type definitions -->
+        {{#if is_input}}
+          {{#is_submitter_name}}
+            {{^is_authenticated}}
+              <input id="place-{{ name }}" name="{{ name }}" type="{{ type }}" {{#attrs}} {{ key }}="{{ value }}"{{/attrs}} value="{{get_value ../../../.. name}}">
+              <span class="or-sign-in">{{#_}}Or sign in with <a class="auth-inline twitter-btn" href="/users/login/twitter/">Twitter</a> <a class="auth-inline facebook-btn" href="/users/login/facebook/">Facebook</a>{{/_}}</span>
+            {{/is_authenticated}}
+            {{^}}
+            <input id="place-{{ name }}" name="{{ name }}" type="{{ type }}" {{#attrs}} {{ key }}="{{ value }}"{{/attrs}} value="{{get_value ../../.. name}}">
+          {{/is_submitter_name}}
+        {{/if}}
+
+        {{#is_textarea}}
+          <textarea id="place-{{ name }}" name="{{ name }}"{{#attrs}} {{ key }}="{{ value }}"{{/attrs}}>{{get_value ../.. name}}</textarea>
+        {{/is_textarea}}
+
+        {{#is_select}}
+          <select id="place-{{ name }}" name="{{ name }}" type="{{ type }}" {{#attrs}} {{ key }}="{{ value }}"{{/attrs}}>
+            {{#select_item_value ../.. name}}
+              {{# options }}
+                {{#if label}}
+                  <option value="{{value}}">{{label}}</option>
+                {{else}}
+                  <option value="{{.}}">{{.}}</option>
+                {{/if}}
+              {{/ options }}
+            {{/select_item_value}}
+          </select>
+        {{/is_select}}
+
+        {{#is_file}}
+          <!--[if lt IE 10 ]><br>Sorry, your browser isn't compatible with our file upload method.<![endif]-->
+          <!--[if (gt IE 9)|!(IE)]><!-->
+          <span class="fileinput-container btn btn-small{{^is_fileinput_supported}} btn-disabled{{/is_fileinput_supported}}">
+            <span>{{ inputfile_label }}</span>
+            <input id="place-{{ name }}" name="{{ name }}" type="{{ type }}"
+                   {{#attrs}} {{ key }}="{{ value }}"{{/attrs}}
+                   {{^is_fileinput_supported}} disabled{{/is_fileinput_supported}}>
+          </span>
+          <span class="fileinput-name">
+            {{^is_fileinput_supported}}{{#_}}Sorry, your browser doesn't support file uploads.{{/_}}{{/is_fileinput_supported}}
+          </span>
+          <!--<![endif]-->
+        {{/is_file}}
+
+        {{#if help_text }}
+          <div class="help-text place-{{ name }}-help-text">{{ help_text }}</div>
+        {{/if}}
       </div>
-    {{/each}}
+    {{/ place_config.items }}
+  </fieldset>
 
-    <!-- begin fields that are included in every form type by default -->
-    {{#if category_selected}}
-      <div id="common-form-elements">
-        {{#each place_config.common_form_elements }}
-          <div class="{{ this.type }} form-field">
-            {{#is name "submitter_name"}}
-              {{#if_not_authenticated}}
-                <label for="place-{{ name }}">{{ prompt }} {{# optional }}<small>({{#_}}optional{{/_}})</small>{{/ optional }}</label>
-                <input id="place-{{ name }}" name="{{ name }}" type="{{ type }}" {{#attrs}} {{ key }}="{{ value }}"{{/attrs}} value="{{get_value ../../../.. name}}" placeholder="{{placeholder}}">
-                <span class="or-sign-in">{{#_}}Or sign in with <a class="auth-inline twitter-btn" href="/users/login/twitter/">Twitter</a> <a class="auth-inline facebook-btn" href="/users/login/facebook/">Facebook</a>{{/_}}</span>
-              {{/if_not_authenticated}}
-            {{/is}}
+  <input name="save-place-btn" id="save-place-btn" type="submit" value="{{ place_config.submit_button_label }}" class="btn btn-primary submit-btn">
 
-            {{#is name "private-submitter_email"}}
-              <label for="place-{{ name }}">{{ prompt }} {{# optional }}<small>({{#_}}optional{{/_}})</small>{{/ optional }}</label>
-              <input id="place-{{ name }}" name="{{ name }}" type="{{ type }}" {{#attrs}} {{ key }}="{{ value }}"{{/attrs}} placeholder="{{placeholder}}">
-            {{/is}}
+  {{#is_authenticated}}
+    <p class="signed-in-as"><img src="{{ current_user "avatar_url" }}" class="avatar" /> {{ current_user "name" }}. <a class="" href="/users/logout/">{{#_}}Log Out{{/_}}</a></p>
+    {{^}}
+  {{/is_authenticated}}
 
-            {{#is type "file"}}
-              <label for="place-{{ name }}">{{ prompt }} {{# optional }}<small>({{#_}}optional{{/_}})</small>{{/ optional }}</label>
-              <span class="fileinput-container btn btn-small{{#if_fileinput_not_supported}} btn-disabled{{/if_fileinput_not_supported}}">
-                <span>{{ inputfile_label }}</span>
-                <input id="place-{{ name }}" name="{{ name }}" type="{{ type }}"
-                       {{#attrs}} {{ key }}="{{ value }}"{{/attrs}}
-                       {{#if_fileinput_not_supported}} disabled{{/if_fileinput_not_supported}}>
-              </span>
-              <span class="fileinput-name">
-                <label for="place-{{ name }}">{{ prompt }} {{# optional }}<small>({{#_}}optional{{/_}})</small>{{/ optional }}</label>
-                {{#if_fileinput_not_supported}}Sorry, your browser doesn't support file uploads.{{/if_fileinput_not_supported}}
-              </span>
-            {{/is}}
+  <div class="form-spinner"></div>
 
-            {{#is type "submit"}}
-              <div>
-                <input name="save-place-btn" id="save-place-btn" type="submit" value="{{ label }}" class="btn btn-primary submit-btn">
-              </div>
-            {{/is}}
-          </div>
-        {{/each}}
-      </div>
-    {{/if}}
-    <!-- end common field types -->
-
-
-
-    <div class="form-spinner"></div>
 </form>
-
-
-  
