--- a/src/sa_web/jstemplates/gis-legend-content.html
+++ b/src/sa_web/jstemplates/gis-legend-content.html
@@ -4,7 +4,15 @@
   {{# groupings}}
     {{#if legend}}
       <li class="layer-type-grouping">
-        <label>{{ title }}
+        <div class="layer-type-grouping-title">
+          <input id="{{ id }}" class="map-legend-grouping-checkbox"
+                 type="checkbox"
+                 {{#if visibleDefault}}
+                 checked="checked"
+                 {{/if}}
+                 ></input>
+          <label for="{{ id }}">{{ title }}</label>
+        </div>
         <ul class="layer-type-grouping-list unstyled-list">
           {{# layers}}
             {{# if legend}}
