--- a/src/sa_web/jstemplates/dataset-form.html
+++ b/src/sa_web/jstemplates/dataset-form.html
@@ -49,21 +49,21 @@
         
         <!-- begin field type definitions -->
         {{#is type "datetime"}}
-          <input id="datetimepicker" name="{{ name }}" type="text" >
+          <input id="datetimepicker" name="{{ name }}" type="text" {{^optional}}required{{/optional}}>
         {{/is}}
 
         {{#is type "text"}}
-          <input id="place-{{ name }}" name="{{ name }}" type="{{ type }}" {{#attrs}} {{ key }}="{{ value }}"{{/attrs}} placeholder="{{placeholder}}">
+          <input id="place-{{ name }}" name="{{ name }}" type="{{ type }}" {{#attrs}} {{ key }}="{{ value }}"{{/attrs}} placeholder="{{placeholder}}" {{^optional}}required{{/optional}}>
         {{/is}}
 
         {{#is type "textarea"}}
-          <textarea id="place-{{ name }}" name="{{ name }}" {{#attrs}} {{ key }}="{{ value }}"{{/attrs}} placeholder="{{placeholder}}"></textarea>
+          <textarea id="place-{{ name }}" name="{{ name }}" {{#attrs}} {{ key }}="{{ value }}"{{/attrs}} placeholder="{{placeholder}}" {{^optional}}required{{/optional}}></textarea>
         {{/is}}
 
         {{#is type "radio_big_buttons"}}
           <div>
             {{#each content}}
-                <input type="radio" name={{ ../name }} id={{ value }} value={{ value }} class="big-btn">
+                <input type="radio" name={{ ../name }} id={{ value }} value={{ value }} class="big-btn" {{^optional}}required{{/optional}}>
                 <label for={{ value }}>{{ label }}</label>
             {{/each}}
           </div>
@@ -88,8 +88,8 @@
 
         {{#is type "dropdown"}}
           <div>
-            <select name={{ ../name }}>
-              <option value="no_response" name="no_response">{{#_}}Select...{{/_}}</option>
+            <select name={{ ../name }} {{^optional}}required{{/optional}}>
+              <option value="" name="no_response">{{#_}}Select...{{/_}}</option>
               {{#each content}}
                   <option value={{value}}>{{label}}</option>
               {{/each}}
