--- a/src/sa_web/jstemplates/sidebar.html
+++ b/src/sa_web/jstemplates/sidebar.html
@@ -16,6 +16,9 @@
       <div class="sidebar-pane" id="{{ id }}-pane">
         <h1 class="sidebar-header">{{ title }}<span class="sidebar-close"><i class="fa fa-chevron-left"></i></span></h1>
         <div id="{{ id }}"></div>
+        {{#if activity}}
+          <ul class="recent-points unstyled-list"></ul>
+        {{/if}}
       </div>
     {{/ config.panels }}
 
